syntax = "proto3";

package mora.events.v1;

// Recurring options for scheduled events.
message RecurringOptions {
    bytes times = 1; // u128 as bytes (16 bytes)
    bytes delay = 2; // u128 as bytes (16 bytes)
}

// Rules for scheduling an event.
message ScheduleRule {
    string schedule_for = 1; // u128 timestamp as string (16 bytes)
    string queue = 2;
    optional RecurringOptions recurring_options = 3;
}

// Request to schedule one or more events.
message ScheduleEventRequest {
    string data = 1;
    ScheduleRule schedule_rule = 2;
}

// Empty response after scheduling events.
message ScheduleEventResponse {}

service EventService {
    // Schedule one or more events to queues.
    rpc ScheduleEvent (ScheduleEventRequest) returns (ScheduleEventResponse);
}
